vlib/v/checker/tests/array_reverse_in_place_immutable_err.vv
fn main() {
	a := [1, 2, 3]
	a.reverse_in_place()
}
